<resources>
    <string name="back">Back</string>
    <string name="emoji">Emoji not allowed</string>
    <string name="mvinbox">Move to Inbox</string>
    <string name="nofolder">No Folder Found</string>
    <string name="ftomv">Move to Folder</string>
    <string name="fnef">Enter Your Folder Name</string>
    <string name="flder">Folders</string>
    <string name="cnff">Create new Folder</string>
    <string name="mnff">Manage Folders</string>
    <string name="eyrfnam">Edit Your Folder Name</string>
    <string name="fl_title">New Folder</string>
    <string name="update_details">Folder Name</string>
    <string name="creat">Create</string>
    <string name="subscriptionexpired">Subscription Expired</string>
    <string name="subscription">Subscription</string>
    <string name="payment">Payment</string>
    <string name="upgradenow">Upgrade Now</string>
    <string name="message">Message</string>
    <string name="aasblt">All attachments should be less than 100Mb</string>
    <string name="permdesc_preventpower">Disables FLAG_SECURE on all windows, enabling screenshots and screen capture in apps that normally wouldn\'t allow it.</string>
    <string name="oldermessages"><u>Older messages</u></string>
    <string name="reportabsue"><u>Report Abuse</u></string>
    <string name="forward">Forward</string>
    <string name="name_fv">User Name</string>
    <string name="reportbtn">Report</string>
    <string name="ok1">Cancel</string>
    <string name="deleted">Delete</string>
    <string name="undo">UNDO</string>
    <string name="restrictview">Restrict View</string>
    <string name="allowview">Allow View</string>
    <string name="psal">Please select any level</string>
    <string name="psalb">Please select image to update</string>
    <string name="browse">Browse</string>
    <string name="viewonly"><u>View Only</u></string>
    <string name="viewndownload"><u>View &amp; Download</u></string>
    <string name="attachmentlevel">Attachment level</string>
    <string name="ppus">Profile picture updated successfully</string>
    <string name="syhnsai">Sorry, you have not selected any file.</string>
    <string name="retry">Retry</string>
    <string name="restrictdone">restrict done</string>
    <string name="fsitbpsafwilt">File size is too big. Please select any other file which is less than 100Mb</string>
    <string name="exefans">.exe files are not supported. Please select any other file</string>
    <string name="smp4">Please Select MP4 files only</string>
    <string name="fsitbmia">File size is too big, max 2MB is allowed</string>
    <string name="cwansaff">Current we are not supporting attaching file format</string>
    <string name="wyr">Write Your Reply</string>
    <string name="pwyr">Please write your reply</string>
    <string name="psvd">Please select valid Date</string>
    <string name="protections">Protections</string>
    <string name="composemail">Compose mail</string>
    <string name="ymnlefv">Your message no longer exists for viewing</string>
    <string name="reply">Reply</string>
    <string name="resen">Resend</string>
    <string name="showtime">Show Time</string>
    <string name="readonly">Read Once</string>
    <string name="validuntil">Valid Until</string>
    <string name="autodelete">Auto Delete</string>
    <string name="send">Send</string>
    <string name="contact">Add Contact</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="outbox">Outbox</string>
    <string name="drafts">Drafts</string>
    <string name="trash">Trash</string>
    <string name="logout">Logout</string>
    <string name="filters">Filters</string>
    <string name="attch">attachment</string>
    <string name="nonettitle">Message</string>
    <string name="inst_ttitle">User Guide</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="bcc">Bcc</string>
    <string name="cc">Cc</string>
    <string name="blockusers">Block Users</string>
    <string name="unblockusers">Unblock Users</string>
    <string name="psbdl">Pin should be 4 digit long</string>
    <string name="subject">Subject</string>
    <string name="composeemail">Compose email</string>
    <string name="syhrwbpltata">Successfully you have registered with Bsecure. Please login to access the app</string>
    <string name="deliverinfo">Delivery information:</string>
    <string name="delivered">delivered</string>
    <string name="notdelivered">not delivered</string>
    <string name="songs">Songs</string>
    <string name="cptc">Can\'t play this content</string>
    <string name="logoff">Logoff</string>
    <string name="infloop">..Infinity loop..</string>
    <string name="atp">Add this Playlist</string>
    <string name="yaiiomcotmio">Your app is in offline mode. Click OK to make it online</string>
    <string name="yhsyamaopmio">You have set your app mode as offline, please make it on</string>
    <string name="flogout">Successfully logged out of Facebook</string>
    <string name="glogout">Successfully logged out of Google Plus</string>
    <string name="tlogout">Successfully logged out of Twitter</string>
    <string name="ywfiopmio">Your WiFi is off, please make it on</string>
    <string name="ydxiopmio">Your Data Connectivity is off, please make it on</string>
    <string name="video">Video</string>
    <string name="yanliya">You are not logged into your account.</string>
    <string name="yanrfpaplfr">You are not registered for push alerts. Please login to get registered</string>
    <string name="patttq">Please add tracks to the queue</string>
    <string name="nonetmsg">We could not establish an internet connection, please check your handset is correctly setup for internet</string>
    <string name="dduration">00:00|00:00</string>
    <string name="nttatq">No tracks to add to queue</string>
    <string name="nttd">No tracks to download</string>
    <string name="ntiq">No tracks in queue</string>
    <string name="peotp">Please enter OTP</string>
    <string name="peowuhr">Please enter OTP which you have received</string>
    <string name="atq">Added to queue</string>
    <string name="cdtq">Already added to queue</string>
    <string name="player">Player</string>
    <string name="ivipepin">Invalid Pin</string>
    <string name="search">Search</string>
    <string name="refresh">refresh</string>
    <string name="atad">All tracks are downloaded.</string>
    <string name="plus_generic_error">Sign in with Google is not available.</string>
    <string name="signed_in_status">Signed in as \"%s\".</string>
    <string name="unknown_person">Unknown</string>
    <string name="player_buffering_message">Buffering ....</string>
    <string name="player_playback_failed_message">Error - Playback failed</string>
    <string name="nipcyns">No Internet, Please check your network settings</string>
    <string name="amb">wynk music</string>
    <string name="pesk">Please enter search key</string>
    <string name="isr">Invalid server response</string>
    <string name="sct">Server connection timeout.!</string>
    <string name="snr1">Server not reachable.!</string>
    <string name="iurl">Invalid URL</string>
    <string name="snr2">Server not reachable.!!</string>
    <string name="snr3">Server not reachable.!!!</string>
    <string name="select_photo">Please select your desired option</string>
    <string name="cam">Camera</string>
    <string name="gall">Gallery</string>
    <string name="downloading">Processing....</string>
    <string name="app_name">ESL Global</string>
    <string name="nodrafts">No Mails Found</string>
    <string name="notrash">No Mails Found</string>
    <string name="menu_settings">Settings</string>
    <string name="sdcardmsg1">Sorry no memory card Found</string>
    <string name="sdcardmsg2">SDCard is wirte protected, can not save content</string>
    <string name="loading">Loading....</string>
    <string name="dippw">Download in progress, please wait....</string>
    <string name="ds">Download started</string>
    <string name="dnsUsongs">Download \u0026 Stream \n Unlimited Songs</string>
    <string name="ymba">Your Wynk Music account</string>
    <string name="pleasewait">Please wait....</string>
    <string name="peu">Please enter username</string>
    <string name="peu1"> Please enter your name</string>
    <string name="pep">Please enter password</string>
    <string name="prep">Please re-enter password </string>
    <string name="syhnsai1">Sorry, your device not support this file</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="refmail">Referral Email Address</string>
    <string name="address">Address</string>
    <string name="password_agian">Confirm Password</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="mobileNo"> Mobile no.</string>
    <string name="enterOtp">Enter OTP</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="recoverpassword">Recover password</string>
    <string name="recoverpin">Recover Pin</string>
    <string name="recover">Recover</string>
    <string name="signin">Sign In</string>
    <string name="addpin">Add Pin</string>
    <string name="addattachments">Add attachments</string>
    <string name="addpin_caps">Add your PIN to continue</string>
    <string name="createaccount">Create Account</string>
    <string name="createnewaccount">Create New Account</string>
    <string name="smiwpwas">Sign me in with Pin when app start</string>
    <string name="emailaddress">Email Address</string>
    <string name="plesase_pn">Enter 4 Digit Pin</string>
    <string name="ple_pn">4 Digit Pin</string>
    <string name="ep">Enter your PIN to continue</string>
    <string name="pin">Pin</string>
    <string name="or">Or</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="forgotPin">Forgot Pin</string>
    <string name="addacc">Add Account</string>
    <string name="generatePin">Generate Pin</string>
    <string name="icama">I cannot access my account</string>
    <string name="peyfn">Please enter your first name</string>
    <string name="peyln">Please enter your last name</string>
    <string name="pepin">Please enter pin</string>
    <string name="peavpin">Please enter a valid pin</string>
    <string name="peei">Please enter Email Address</string>
    <string name="peavei">Please enter a valid Email Address</string>
    <string name="peavei1">Invalid Email Address</string>
    <string name="psmbc">Password strength must be 8&#8211;16 characters</string>
    <string name="peavccEi">Please enter a valid Cc Email Address</string>
    <string name="peavbccEi">Please enter a valid Bcc Email Address</string>
    <string name="emc">Enter Minimum 8 characters</string>
    <string name="pePswd">Please enter password</string>
    <string name="pecPswd">Please enter confirm password</string>
    <string name="peavPswd">Please enter a valid password</string>
    <string name="pes">Please enter subject</string>
    <string name="eiaceidrnc_old">Email Address and confirm Email Address is not correct</string>
    <string name="eiaceidrnc">Email Address didn\'t match</string>
    <string name="cpmm">Confirm password must match</string>
    <string name="pecn">Please select city name</string>
    <string name="pecn1">Please select country name</string>
    <string name="pecn11">Please browse file</string>
    <string name="pecn2">Please select state name</string>
    <string name="signintext">Sign In With ESL Global</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="cancel_btn">Cancel</string>
    <string name="settings">Settings</string>
    <string name="phno">Phone No</string>
    <string name="aemail">Email Address</string>
    <string name="asub">Add Contact</string>
</resources>