<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eslglobal.com.esl.Bsecure">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/m_inbox"
            android:icon="@drawable/menu_inbox"
            android:title="@string/inbox" />
        <item
            android:id="@+id/m_sent"
            android:icon="@drawable/menu_send"
            android:title="@string/sent" />
        <item
            android:id="@+id/m_drafts"
            android:icon="@drawable/menu_drafts"
            android:title="@string/drafts" />
        <item
            android:id="@+id/m_trash"
            android:icon="@drawable/menu_trash"
            android:title="@string/trash" />
    </group>
    <item android:title="All Lables">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/m_settings"
                    android:icon="@drawable/menu_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/m_folder"
                    android:icon="@drawable/folders_ic"
                    android:title="@string/flder" />
                <item
                    android:id="@+id/m_logout"
                    android:icon="@drawable/menu_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

</menu>