<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/enterpinlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/esl_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/imageView"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ep"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/ed_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_pintText"
        android:layout_margin="10dp"
        android:background="@drawable/cmts_bg"
        android:digits="1234567890"
        android:fontFamily="Comic Sans MS"
        android:gravity="center"
        android:hint="@string/plesase_pn"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <TextView
        android:id="@+id/tv_forgotpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ed_pin"
        android:fontFamily="sans-serif-light"
        android:padding="15dp"
        android:layout_gravity="right"
        android:text="@string/forgotPin"
        android:textSize="18sp"
        android:textColor="@color/d_grey"></TextView>

    <TextView
        android:id="@+id/tv_addaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forgotpin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:padding="15dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/addacc"
        android:textColor="@color/d_grey" />

</LinearLayout>