<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginlinerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/esl_logo" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/imageView"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/signintext"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cmts_bg"
                android:drawableLeft="@drawable/signup_email"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/signup_email"
                android:drawingCacheQuality="high"
                android:fontFamily="sans-serif-light"
                android:hint="@string/emailaddress"
                android:inputType="textEmailAddress"
                android:maxLength="64"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cmts_bg"
                android:drawableLeft="@drawable/signup_password"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/signup_password"
                android:drawingCacheQuality="high"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="64"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/click_forgetpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-light"
                android:gravity="right"
                android:text="@string/forgotPassword"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/template_bt_red_bg"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signin"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/click_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:text="Don't have an account? Register here"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/click_lessons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:text="Lesson Samples"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
